fix(Home): Adjust font size on smaller screens

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,9 +7,15 @@
 
 .discoverTitle h1 {
     display: inline;
-    font-size: 3em;
+    font-size: 3.5vw;
 }
 
 .discoverTitle h1:last-child {
     color: rgb(225, 0, 0);
+}
+
+@media only screen and (max-width: 800px) {
+    .discoverTitle h1 {
+        font-size: 8vw;
+    }
 }
